1999-11-11  Jacob Berkman  <jberkman@andrew.cmu.edu>

	        * gnome-config.c (gnome_config_make_vector): correctly
	        handle the "a \b c" case (escaped character between 2
	        spaces)
	        (gnome_config_make_vector): george also suggested this
	        fix

	        Fixes bug #3475	

1999-11-09  Elliot Lee  <sopwith@redhat.com>

	* Makefile.am: Link libgnome to $(LIBGNOME_LIBS), not $(GLIB_LIBS).

	* gnome-i18n.c: Add a comment about implementation behaviour.
	* gnome-moz-remote2.c: Finish implementation of new gnome-moz-remote
	* gnome-url.[ch]: Support new API with GnomeURLDisplayContext's, change gnome_url_show to just use this.
	* gnome-util.[ch]: Add a "help" file domain, for looking up help files.
	* gnome10-compat.[ch]: No change, stupid CVS.
	* libgnome{,10compat}.h: Move gnome-help into 1.0 compat library.
	* gnomelib-init2.c: Don't free the popt context unless that is specifically requested - programs need a sane way
	to get to the args.

1999-10-30  Dick Porter <dick@acm.org>

	* Allow gnome-moz-remote to launch a netscape as a last resort, if
		--remote cant find a running one.

1999-10-27  Elliot Lee  <sopwith@redhat.com>

	* gnomelib-init.h: Add attributes for application prefix/libdir/datadir/sysconfdir.
	* gnome-util.c: Make use of these attributes in gnome_file_locate().

	* gnome-ditem.[ch]: Add save routine, location accessors. Remove run-in-bg flag. Add check-for-changes routine.

1999-10-26  Elliot Lee  <sopwith@redhat.com>

	* gnome-ditem.[ch]: New files - replacement for gnome-dentry.[ch]
	* gnome-util.[ch] (gnome_file_locate) Redo the file location stuff
	                  (g_file_test): Use access() if only testing for existence. Also fix the other tests to
			                 work slightly more sanely (check that all specified conditions are met,
					 rather than that all unspecified conditions are not met).
	                  (gnome_user_shell): Use g_strdup instead of strdup