@@ -1,3 +1,7 @@
+1999-11-15  Elliot Lee  <sopwith@redhat.com>
+
+	* gnomelib-init2.[ch]: Add gnome_program_module_load() (Dynamic module loading from --load-modules, $GNOME_MODULES).
+
 1999-11-11  Jacob Berkman  <jberkman@andrew.cmu.edu>
 
 	        * gnome-config.c (gnome_config_make_vector): correctly
